# crewai2

.claude/: settings.local.json
parking_agent/: .dockerignore  .gcloudignore  Dockerfile  README-Docker.md  README.md  cloudbuild.yaml  docker-compose.yml  english_api.py  pyproject.toml  requirements.txt  test_api.py  user_friendly_api.py
parking_agent/src/parking_agent/: api.py  crew.py  main.py
parking_agent/src/parking_agent/config/: agents.yaml  tasks.yaml
parking_agent/src/parking_agent/tools/: parking_tool.py
travel_planner2/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  travel_guide.md
travel_planner2/.claude/: settings.local.json
travel_planner2/src/travel_planner2/: api.py  crew.py  main.py  travel_guide.md
travel_planner2/src/travel_planner2/config/: agents.yaml  tasks.yaml
travel_planner2/src/travel_planner2/tools/: __init__.py  maps_tool.py  serper_tool.py
